Thu Oct 18 20:14:02 2001  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: Rewrite the path resolution bits,
	  rewrite the move method to be saner, but still incomplete,
	  implement open for write and sanitized things all over.

2001-10-17  jacob berkman  <jacob@ximian.com>

	* configure.in: remove gdk dependency

	* modules/file-method.c (monitor_setup): 
	(fam_callback): use GIOChannels directly rather than through
	gdk_input calls (removes an unnecessary gdk dependency)

Tue Oct 16 00:30:27 2001  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: not all systems have the
	  d_type dirent thingie, so don't use it, implement unlink and
	  move (mostly), though changes are not yet written to disk,
	  add a bunch of fixmes and some more code to the writing functions.
	  also remove some debugging output.

2001-10-15  Laszlo Peter <laca@ireland.sun.com>

	Patch for 48545 - add prioritized versions of all async calls

	* libgnomevfs/gnome-vfs-async-ops.h,
	  libgnomevfs-pthread/gnome-vfs-async-ops.c,
	  libgnomevfs/gnome-vfs-helpers.h,
	  libgnomevfs/gnome-vfs-helpers.c:
	  added a new argument to all async operations, the job priority,
	  which comes just before the callback. Priority is an int, valid
	  range is GNOME_VFS_MIN_PRIORITY (-10) to GNOME_VFS_MAX_PRIORITY
	  (+10). Use GNOME_VFS_DEFAULT_PRIORITY (0) if you don't care.

	* libgnomevfs-pthread/gnome-vfs-job-queue.h,
	  libgnomevfs-pthread/gnome-vfs-job-queue.c: (new files)
          Put async jobs in a queue if the number of concurrent jobs
          exceeds a limit. Start jobs based on the priority.
	  Public functions gnome_vfs_async_{get,set}_job_limit can be
	  used to change the default job limit.

	* libgnomevfs/gnome-vfs-job-limit.h: (new file) public prototypes
	  of the functions to get/set the job limit.

	* libgnomevfs-pthread/gnome-vfs-job-slave.c:
          (gnome_vfs_thread_backend_shutdown): shut down the job queue
