@@ -1,3 +1,8 @@
+Fri Oct 19 23:24:06 2001  George Lebl <jirka@5z.com>
+
+	* modules/vfolder-desktop-method.c: implement make/remove_directory,
+	  do proper checking of schemes as a way to do "same fs" check
+
 Thu Oct 18 20:14:02 2001  George Lebl <jirka@5z.com>
 
 	* modules/vfolder-desktop-method.c: Rewrite the path resolution bits,
